# Atlas

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
atlas_gateway/: auth.py  config.py  logging.py  main.py  metrics.py  quota.py  utils.py  vllm_client.py
examples/: curl_usage.sh  forecasting_demo.py  load_test.py  mock_upstream_streaming.py  test_streaming.py
examples/mock_upstream/: Dockerfile  main.py
forecasting/: capacity_planner.py  core.py  demand_forecaster.py  metrics_collector.py
gateway/: auth.py  config.py  forecasting_api.py  logging.py  main.py  metrics.py  quota.py  rate_limit.py  sentinel_client.py  streaming.py  utils.py  vllm_client.py
gateway/providers/: base.py
infra/: Dockerfile.gateway  docker-compose.yml
tests/: conftest.py  test_enhanced_streaming.py  test_forecasting.py  test_health.py  test_quota_rate.py  test_streaming_quota.py  test_usage.py
