[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Atlas project"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["gateway*", "forecasting*", "infra*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100